[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nonebot-plugin-onething-monitor"
version = "0.6.1"
description = "网心云多账号在线状态监控 NoneBot2 插件，支持多账号多设备多种登录方式"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "WhyPilotXia" },
]
keywords = ["nonebot", "nonebot2", "onebot", "onething", "monitor"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Robot Framework",
    "Framework :: Robot Framework :: Library",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "nonebot2>=2.0.0",
    "nonebot-adapter-onebot>=2.0.0",
    "nonebot-plugin-apscheduler>=0.5.0",
    "aiohttp>=3.8.0",
    "Pillow>=9.0.0",
]

[project.urls]
Homepage = "https://github.com/WhyPilotXia/nonebot_plugin_onething_monitor"
Repository = "https://github.com/WhyPilotXia/nonebot_plugin_onething_monitor"

[tool.setuptools.packages.find]
where = ["."]
include = ["nonebot_plugin_onething_monitor*"]
